# SPIN.Core

./: .gitignore
ccpp/: CMakeLists.txt
ccpp/include/public/SPIN/: Guid.h
ccpp/src/SPIN/: CMakeLists.txt
ccpp/src/SPIN/Core/: CMakeLists.txt
ccpp/src/SPIN/Core/Guid/: EmptyGuid.c  Equals.c  NewGuid.c  ToString.c
ccpp/src/SPIN/Guid/: CMakeLists.txt  EmptyGuid.c  Equals.c  NewGuid.c  ToString.c
dotnet/: Class1.cs  GlobalUsings.cs  SPIN.Core.csproj
dotnet/Contracts/Requests/Abstractions/: IRequest.cs  ISensorRequest.cs
dotnet/Contracts/Requests/Generic/: RegisterServicesRequest.cs
dotnet/Contracts/Requests/SensorRequests/: GetPressureRequest.cs  GetRelativeHumidity.cs  GetTemperatureRequest.cs
dotnet/Contracts/Responses/: GetPressureResponse.cs  GetRelativeHumidityResponse.cs  GetTemperatureResponse.cs
dotnet/Contracts/Responses/Abstractions/: ISensorReponse.cs  SensorResponseStatus.cs
dotnet/Extensions/: IServiceProviderExtensions.cs
dotnet/Installers/: Bme280Installer.cs  Bme280SensorInstaller.cs  I2cConnectionSettingsInstaller.cs  I2cSettingsConnectionInstaller.cs
dotnet/Installers/Abstractions/: IInstaller.cs
dotnet/Sensors/: Bme280Sensor.cs  Bme680Sensor.cs  Bmp280Sensor.cs
dotnet/Sensors/Abstractions/: IPressureSensor.cs  IRelativeHumiditySensor.cs  ITemperatureSensor.cs
dotnet/Services/: PressureService.cs  RelativeHumidityService.cs  TemperatureService.cs
dotnet/Services/Abstractions/: IPressureService.cs  IRelativeHumidityService.cs  ITemperatureService.cs
